--- a/electron/package.json
+++ b/electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e9pass_cert",
-  "version": "1.1.7",
+  "version": "1.1.9",
   "description": "Desktpo Application For E9pay File Management",
   "main": "renderer.js",
   "scripts": {
@@ -33,7 +33,7 @@
         ]
       },
       {
-        "from": "../build/web/",
+        "from": "web/",
         "to": "app/web",
         "filter": [
           "**/*"
